# GS_LABS_test_task

./: CMakeLists.txt  LoadBalancer.cpp  LoadBalancer.h  README.md  WeightedRoundRobin.cpp  WeightedRoundRobin.h  config_bal.json  configuration_parse.cpp  configuration_parse.h  json.cpp  json.h  main.cpp
Test_env/: datagram_generator.cpp  node1.cpp  node2.cpp  node3.cpp
